# MessageSystems

./: .gitignore  CMakeLists.txt  README.md
DirectDelivery/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  Message.h  MessagesReceiver.h  app.cpp
MessageImpl/: CMakeLists.txt  README.md  app.cpp
MessageImpl/Message/DynamicMessage/: DynamicMessage.h
MessageImpl/Message/VariantMessage/: VariantMessage.h
MessageImpl/src/: DynamicMessage.h  ExampleMessage.h  MessageType.h  VariantMessage.h  app.cpp
Observer/: CMakeLists.txt  CommunicationPort.cpp  CommunicationPort.h  Component.h  app.cpp
Publisher-Subscriber/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  Listener.h  MessageSystem.cpp  MessageSystem.h  app.cpp
